# auto-pynance

./: README.md  docker-compose.yml
core/: .env.example  .gitignore  Dockerfile  init.sh  pyproject.toml
core/auto_pynance/: __init__.py  _pg_init.py  price_history.py  tools.py  trade.py
core/auto_pynance/candle/: __init__.py  base.py  heikinashi.py  linreg.py
core/auto_pynance/dump/: __init__.py  usdm.py
core/auto_pynance/metrics/: __init__.py  candle.py  heikinashi.py  ta.py
core/auto_pynance/model/: __init__.py  base.py  ticker_data.py
core/auto_pynance/strategies/: HCE.py  __init__.py
core/playgrounds/: bb.py  unixtime.py
pg/: init.sql
playgrounds/: bb.py  rsi.py  sma.py  stochastic.py  test.py  unixtime.py
