[tool.poetry]
name = "auto-pynance"
version = "0.1.0"
description = ""
authors = ["cloudchamber <jizon0123@protonmail.com>"]
packages = [{include = "auto_pynance"}]

[tool.poetry.dependencies]
python = "^3.10"
cython = "^0.29.33"
python-dotenv = "^1.0.0"
python-binance = "^1.0.17"
ta-lib = "^0.4.25"
numpy = "^1.24.2"
reactivex = "^4.0.4"
pandas = "^1.5.3"
matplotlib = "^3.7.1"
peewee = "^3.16.0"
psycopg2-binary = "^2.9.5"


[tool.poetry.scripts]
trade = "auto_pynance.trade:init"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
